--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/workbox.js"></script>
 </body>
 
 </html>
